# MCP9600_Pi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: mcp9600.c
